8209003: Consolidate use of empty collections in java.lang.module
Reviewed-by: alanb, mchung